[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/my_sprites/backgroundMenu.jpg" type="Texture" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://sprites/my_sprites/controls.png" type="Texture" id=3]
[ext_resource path="res://sprites/my_sprites/title.png" type="Texture" id=4]
[ext_resource path="res://sprites/my_sprites/iniciar.png" type="Texture" id=5]
[ext_resource path="res://sprites/my_sprites/iniciarPressed.png" type="Texture" id=6]
[ext_resource path="res://sprites/my_sprites/Grimes - Oblivion (320 kbps).wav" type="AudioStream" id=7]
[ext_resource path="res://sprites/my_sprites/infos.png" type="Texture" id=8]
[ext_resource path="res://sprites/my_sprites/infosPressed.png" type="Texture" id=9]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="BackgroundMenu" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.623529 )
self_modulate = Color( 1, 1, 1, 0.509804 )
position = Vector2( 56, 216 )
scale = Vector2( 0.564894, 0.337943 )
texture = ExtResource( 1 )
offset = Vector2( 185.345, -353.018 )

[node name="Title" type="Sprite" parent="."]
modulate = Color( 0.317647, 0.341176, 0.341176, 0.843137 )
position = Vector2( 160, 40 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="Iniciar" type="Sprite" parent="."]
position = Vector2( 160, 100 )
scale = Vector2( 0.17, 0.17 )
texture = ExtResource( 5 )

[node name="IniciarPressed" type="Sprite" parent="."]
visible = false
position = Vector2( 160, 104 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="Controls" type="Sprite" parent="."]
position = Vector2( 160, 176 )
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 120.0
margin_top = 88.0
margin_right = 197.0
margin_bottom = 108.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="Infos" type="Sprite" parent="."]
position = Vector2( 160, 128 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )

[node name="InfosPressed" type="Sprite" parent="."]
visible = false
position = Vector2( 160, 128 )
scale = Vector2( 0.23, 0.23 )
texture = ExtResource( 9 )

[node name="Button2" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 128.0
margin_top = 120.0
margin_right = 192.0
margin_bottom = 140.0

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="Button2" to="." method="_on_Button2_mouse_entered"]
[connection signal="mouse_exited" from="Button2" to="." method="_on_Button2_mouse_exited"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
